--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 								<span class="position">게시판 만들기 (MVC 모델1/2)_개인프로젝트 </span>
 								<p>이젠컴퓨터 아카데미(주)<br /></p>
 								<b class="text-primary">기술 스택 및 툴</b>
-								<p>SPRING BOOT, SPRING, JSP, MSSQL, ORACLE, MYBATIS, ECLIPSE, GIT, MARIADB, VISUAL STUDIO CODE</p>
+								<p>SPRING BOOT, SPRING, JSP, MYSQL, ORACLE, MYBATIS, ECLIPSE, GIT, MARIADB, VISUAL STUDIO CODE</p>
 								<b class="text-primary">주요 업무 </b>
 								<div>
 									<div> - MVC 모델 1/2 를 이용한 게시판 만들기</div>
@@ -279,7 +279,7 @@
 								<span class="position">개인 일기장</span>
 								<p>COM & PRO TECH<br /></p>
 								<b class="text-primary">기술 스택 및 툴</b>
-								<p>SPRINGBOOT, MSSQL, REACT, POSTMAN, GIT, INTELLIJ, VISUAL STUDIO CODE</p>
+								<p>SPRINGBOOT, MYSQL, REACT, POSTMAN, GIT, INTELLIJ, VISUAL STUDIO CODE</p>
 								<b class="text-primary">주요 업무 </b>
 								<div>
 									
@@ -304,7 +304,7 @@
 								<span class="position">키오스크</span>
 								<p>COM & PRO TECH<br /></p>
 								<b class="text-primary">기술 스택 및 툴</b>
-								<p>SPRINGBOOT, MSSQL, REACT, POSTMAN, GIT, INTELLIJ, VISUAL STUDIO CODE</p>
+								<p>SPRINGBOOT, MYSQL, REACT, POSTMAN, GIT, INTELLIJ, VISUAL STUDIO CODE</p>
 								<b class="text-primary">주요 업무 </b>
 								<div>
 									
@@ -479,7 +479,7 @@
 							</div>
 							<div class="col-lg-4 mb-4">
 								<div class="bg-white rounded-lg shadow p-4">
-									<h2 class="h5 font-weight-bold text-center mb-4">MSSQL</h2>
+									<h2 class="h5 font-weight-bold text-center mb-4">MYSQL</h2>
 
 									<!-- Progress bar 1 -->
 									<div class="progress mx-auto" data-value='65'>
