--- a/index.html
+++ b/index.html
@@ -279,14 +279,16 @@
 								<span class="position">개인 일기장</span>
 								<p>COM & PRO TECH<br /></p>
 								<b class="text-primary">기술 스택 및 툴</b>
-								<p>SPRINGBOOT, MYSQL, REACT, POSTMAN, GIT, INTELLIJ, VISUAL STUDIO CODE</p>
+								<p>JAVA, HTML, JS, CSS / MY -SQL,/ VISUAL STUDIO CODE, SPRING BOOT, GIT, INTELLIJ, POSTMAN, REACT</p>
 								<b class="text-primary">주요 업무 </b>
 								<div>
 									
 									<div> - 회원가입-로그인-시큐리티-토큰 발급 구현</div>
 									<div> - 회원가입시 프로필 사진 등록 구현/ 로그인시 페이지  Header에 보여지게 구현</div>
-									<div> - CRUD 구현</div>
-									<div> - REACT, Mui를 이용한 전반적인 페이지 구현</div>
+									<div> - 로그인 후 각 회원에 따른 다이어리 내용 구현</div>
+									<div> - RESTful API를 이용한 CRUD 구현</div>
+									<div> - REACT, @Mui를 이용한 전반적인 페이지 구현</div>	
+									<div> - DB 스키마 설계 및 구현</div>
 									<div> - CODE: <a href="https://github.com/youzyko/Diary_react">https://github.com/youzyko/Diary_react </a></div>
 									<div> - CODE: <a href="https://github.com/youzyko/Diary_springboot">https://github.com/youzyko/Diary_springboot</a></div>
 									<!-- <div> - Serverless 환경을 위한 s3 기반의 static hosting 구축</div> -->
@@ -299,20 +301,23 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2023.03-(3개월)</span>
+								<span class="date">2023.03-2023.06(3개월)</span>
 								<h2>Back-end/Front-end</h2>
 								<span class="position">키오스크</span>
 								<p>COM & PRO TECH<br /></p>
 								<b class="text-primary">기술 스택 및 툴</b>
-								<p>SPRINGBOOT, MYSQL, REACT, POSTMAN, GIT, INTELLIJ, VISUAL STUDIO CODE</p>
+								<p>JAVA, HTML, JS, CSS / MY -SQL,/ VISUAL STUDIO CODE, SPRING BOOT, GIT, INTELLIJ, POSTMAN, REACT</p>
 								<b class="text-primary">주요 업무 </b>
 								<div>
 									
 									<div> - 회원가입-로그인-시큐리티-토큰 발급 구현</div>
-									<div> - 관리자 모드/ 고객 모드 따로 구현</div>
-									<div> - 관리자 모드 접속시 음료,메인 광고, 토핑의 종류 등록, 수정, 삭제 구현</div>
+									<div> - admin 모드/ 고객 모드 구현(관리자모드인 경우만 CUD 가능/고객모드는 Reading만 가능)</div>
+									<div> - RESTful API를 이용한 CRUD 구현</div>
+									<div> - 각 메뉴마다 상세 옵션선택 가능</div>
 									<div> - CRUD 구현</div>
-									<div> - REACT, Mui를 이용한 전반적인 페이지 구현</div>
+									<div> - DB 스키마 설계 및 구현</div>
+									<div> - PG사(토스페이먼츠) 연동</div>
+									<div> - REACT, @Mui를 이용한 전반적인 페이지 구현</div>
 									<div> - CODE: <a href="https://github.com/youzyko/koisk_react">https://github.com/youzyko/koisk_react</a></div>
 									<div> - CODE: <a href="https://github.com/youzyko/kiosk_springboot">https://github.com/youzyko/kiosk_springboot</a> </div>
 									<!-- <div> - Serverless 환경을 위한 s3 기반의 static hosting 구축</div> -->
