--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							<p>"끊임 없는 배움과 도전으로 성장하는 개발자"  </p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>고경진</span></li>
-								<li class="d-flex"><span>Address:</span> <span>가산디지털1로 196</span></li>
+								<li class="d-flex"><span>Address:</span> <span>서울시 개포로 264</span></li>
 								<li class="d-flex"><span>Email:</span> <span>gokongjin@gmail.com</span></li>
 								<li class="d-flex"><span>Phone: </span> <span>0502-1910-3158</span></li>
 							</ul>
