--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Address</h3>
-							<p>가산 디지털1로 196</p>
+							<p>서울시 개포로 264</p>
 						</div>
 					</div>
 				</div>
